[package]
name = "slicer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A lightning-fast CLI log parser and analyzer that streams gigabytes of logs with minimal memory"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/slicer"
keywords = ["log", "parser", "cli", "streaming", "analyzer"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
indicatif = "0.17"
anyhow = "1"
colored = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
